update PATCH `/me` to refresh discord username
